# frl-dsl

./: CHANGELOG.md  LICENSE  estructura.md  informe.md  propuesta.md  tp.cabal
app/: Main.hs  Test.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ejemplos/: variablesFuncionesListas.frl  variablesListas.frl
src/: AST.hs  Eval.hs  Eval1.hs  Eval2.hs  EvalAux.hs  Monads.hs  PPfrl.hs  Parser.hs
test/: ejemplo.frl  pp.frl  pp2.frl  prueba.frl  prueba2.frl  test.frl
